{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 21,
  "lineage": "b6bc978c-62e2-bbf5-5674-3fe7b801dbb4",
  "resources": [
    {
      "module": "module.instance1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0083662ba17882949",
            "arn": "arn:aws:ec2:us-east-1:629012430765:instance/i-0116a6c42803c0d0c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0116a6c42803c0d0c",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "pemkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c0f7acf56ccae4c4",
            "private_dns": "ip-10-1-1-112.ec2.internal",
            "private_ip": "10.1.1.112",
            "public_ip": "54.174.13.38",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a4ae5c1d04f40c16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea34b2facb8a9ea7",
            "tags": {
              "Name": "app1",
              "env": "demo",
              "service": "apache"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07f6793df93a95676"
            ]
          }
        }
      ]
    },
    {
      "module": "module.instance2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0083662ba17882949",
            "arn": "arn:aws:ec2:us-east-1:629012430765:instance/i-0a3351148afea8e0b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3351148afea8e0b",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "pemkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0312ab812f20a0049",
            "private_dns": "ip-10-1-2-13.ec2.internal",
            "private_ip": "10.1.2.13",
            "public_ip": "107.22.131.36",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-020bedc4c467cebd6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0227b7fa8d4bb637b",
            "tags": {
              "Name": "app2",
              "env": "demo",
              "service": "apache"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07f6793df93a95676"
            ]
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629012430765:internet-gateway/igw-01d4dcc1ad50c446f",
            "id": "igw-01d4dcc1ad50c446f",
            "owner_id": "629012430765",
            "tags": {
              "Name": "demovpc"
            },
            "vpc_id": "vpc-0e902f0896469d148"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:629012430765:loadbalancer/app/demo-alb/9feacf19fc09caac",
            "arn_suffix": "app/demo-alb/9feacf19fc09caac",
            "dns_name": "demo-alb-227124598.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:629012430765:loadbalancer/app/demo-alb/9feacf19fc09caac",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-alb",
            "security_groups": [
              "sg-09e6f6e4d8cc739ee"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a09e9503bc50511"
              },
              {
                "subnet_id": "subnet-083593eb3379a5967"
              }
            ],
            "subnets": [
              "subnet-04a09e9503bc50511",
              "subnet-083593eb3379a5967"
            ],
            "tags": {
              "Name": "frontend-lb",
              "env": "demo"
            },
            "vpc_id": "vpc-0e902f0896469d148",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:629012430765:listener/app/demo-alb/9feacf19fc09caac/cee2771baed2e532",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:629012430765:targetgroup/demo-lb-tg/e421421fa3b1c45f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:629012430765:listener/app/demo-alb/9feacf19fc09caac/cee2771baed2e532",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:629012430765:loadbalancer/app/demo-alb/9feacf19fc09caac",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.this",
            "aws_lb_target_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:629012430765:targetgroup/demo-lb-tg/e421421fa3b1c45f",
            "arn_suffix": "targetgroup/demo-lb-tg/e421421fa3b1c45f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:629012430765:targetgroup/demo-lb-tg/e421421fa3b1c45f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "demo-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e902f0896469d148"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:629012430765:targetgroup/demo-lb-tg/e421421fa3b1c45f-20200719044138633200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:629012430765:targetgroup/demo-lb-tg/e421421fa3b1c45f",
            "target_id": "i-0116a6c42803c0d0c"
          },
          "depends_on": [
            "aws_lb_target_group.app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:629012430765:targetgroup/demo-lb-tg/e421421fa3b1c45f-20200719044138472800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:629012430765:targetgroup/demo-lb-tg/e421421fa3b1c45f",
            "target_id": "i-0a3351148afea8e0b"
          },
          "depends_on": [
            "aws_lb_target_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056cbdf8057305a6b",
            "original_route_table_id": "rtb-0d271a031b87cf1c8",
            "route_table_id": "rtb-0e8dd6e9846377e44",
            "vpc_id": "vpc-0e902f0896469d148"
          },
          "depends_on": [
            "aws_route_table.r",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e8dd6e9846377e44",
            "owner_id": "629012430765",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d4dcc1ad50c446f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demovpc"
            },
            "vpc_id": "vpc-0e902f0896469d148"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629012430765:security-group/sg-09e6f6e4d8cc739ee",
            "description": "alb_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e6f6e4d8cc739ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80_inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": null,
            "owner_id": "629012430765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e902f0896469d148"
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629012430765:security-group/sg-07f6793df93a95676",
            "description": "ec2_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f6793df93a95676",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80_inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "49.37.192.0/32"
                ],
                "description": "22_inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_sg",
            "name_prefix": null,
            "owner_id": "629012430765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e902f0896469d148"
          },
          "depends_on": [
            "data.http.myip",
            "module.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629012430765:subnet/subnet-0ea34b2facb8a9ea7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0ea34b2facb8a9ea7",
            "map_public_ip_on_launch": false,
            "owner_id": "629012430765",
            "tags": {
              "Name": "subnet"
            },
            "vpc_id": "vpc-0e902f0896469d148"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629012430765:subnet/subnet-0227b7fa8d4bb637b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0227b7fa8d4bb637b",
            "map_public_ip_on_launch": false,
            "owner_id": "629012430765",
            "tags": {
              "Name": "subnet"
            },
            "vpc_id": "vpc-0e902f0896469d148"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629012430765:subnet/subnet-04a09e9503bc50511",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.100.0/24",
            "id": "subnet-04a09e9503bc50511",
            "map_public_ip_on_launch": false,
            "owner_id": "629012430765",
            "tags": {
              "Name": "subnet"
            },
            "vpc_id": "vpc-0e902f0896469d148"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629012430765:subnet/subnet-083593eb3379a5967",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.200.0/24",
            "id": "subnet-083593eb3379a5967",
            "map_public_ip_on_launch": false,
            "owner_id": "629012430765",
            "tags": {
              "Name": "subnet"
            },
            "vpc_id": "vpc-0e902f0896469d148"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629012430765:vpc/vpc-0e902f0896469d148",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0cfac61e6516ec8be",
            "default_route_table_id": "rtb-0d271a031b87cf1c8",
            "default_security_group_id": "sg-017febe239fabc561",
            "dhcp_options_id": "dopt-0f910611c937fc9a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e902f0896469d148",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d271a031b87cf1c8",
            "owner_id": "629012430765",
            "tags": {
              "Name": "demovpc"
            }
          }
        }
      ]
    }
  ]
}